# i3Prototype

./: CMakeLists.txt  readme.md
qml/: main.qml
resources/: qml.qrc
src/: i3connector.cpp  i3connector.h  keyboardinterceptor.cpp  keyboardinterceptor.h  main.cpp
